--- a/templates/index.html
+++ b/templates/index.html
@@ -2,46 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Recommender System</title>
-    <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <style>
+        body {
+            background-color: black;
+            color: #f8f8f8;
+            padding-top: 70px; /* Space for the navbar */
+        }
+        .card {
+            background-color: #2c2c2c;
+            color: #f8f8f8;
+            border: 1px solid #444;
+        }
+        .card-img-top {
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+        }
+        .card-body {
+            padding: 15px;
+        }
+    </style>
 </head>
-<style>
-    .text-white{
-        color:white
-    }
-</style>
-<body style="background-color:black">
+<body>
 
-    <nav class="navbar" style="background-color:#00a65a">
-        <a class="navbar-brand">My Book recommender</a>
-        <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/recommend">Recommend</a></li>
-            <li><a>Contact</a></li>
-        </ul>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{{ url_for('index') }}">Book Recommender System</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="{% if request.endpoint == 'index' %}active{% endif %}"><a href="{{ url_for('index') }}">Top 50 Books</a></li>
+                <li class="{% if request.endpoint == 'recommend_ui' %}active{% endif %}"><a href="{{ url_for('recommend_ui') }}">Recommend Books</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                    <li class="{% if request.endpoint == 'profile' %}active{% endif %}"><a href="{{ url_for('profile') }}">Profile</a></li>
+                    <li><a href="{{ url_for('logout') }}" class="btn btn-danger navbar-btn" style="margin-left: 10px;">Logout</a></li>
+                {% else %}
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
+                {% endif %}
+            </ul>
+        </div>
     </nav>
-
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-white" style="font-size:50px">Top 50 Books</h1>
+                <h1 style="color: #ffc107; margin-bottom: 20px;">Top 50 Highly Rated Books</h1>
             </div>
 
             {% for i in range(book_name|length) %}
-                <div class="col-md-3" style="margin-top:50px">
-                    <div class="card">
-                        <div class="card-body">
-                            <img class="card-img-top" src="{{ image[i] }}">
-                            <p class="text-white">{{ book_name[i] }}</p>
-                            <h4 class="text-white">{{ author[i] }}</h4>
-                            <h4 class="text-white">Votes - {{ votes[i] }}</h4>
-                            <h4 class="text-white">Rating - {{ rating[i] }}</h4>
-                        </div>
+            <div class="col-md-3" style="margin-bottom: 20px;">
+                <div class="card shadow">
+                    <img class="card-img-top" src="{{ image[i] }}" alt="{{ book_name[i] }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ book_name[i] }}</h5>
+                        <p class="card-text text-muted">By: {{ author[i] }}</p>
+                        <p class="card-text">Avg Rating: <strong>{{ rating[i]|round(2) }}</strong></p>
+                        <p class="card-text">Votes: {{ votes[i] }}</p>
                     </div>
                 </div>
+            </div>
             {% endfor %}
-
 
         </div>
     </div>
