--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -1,45 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Recommender - Recommendations</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <style>
-        body {
-            background-color: black;
-            color: #f8f8f8;
-            padding-top: 70px; /* Space for the navbar */
-        }
-        .container {
-            max-width: 1200px;
-        }
-        .card {
-            background-color: #2c2c2c;
-            color: #f8f8f8;
-            border: 1px solid #444;
-            height: 100%;
-        }
-        .card-img-top {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-        }
-        .card-body {
-            padding: 15px;
-        }
-        .btn-success {
-            background-color: #28a745;
-            border-color: #28a745;
-            width: 100%;
-            margin-top: 5px;
-        }
-        .btn-warning {
-            background-color: #ffc107;
-            border-color: #ffc107;
-            width: 100%;
-        }
+        /* ... (Your existing styles) ... */
     </style>
 </head>
 <body>
@@ -50,20 +16,24 @@
                 <a class="navbar-brand" href="{{ url_for('index') }}">Book Recommender System</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="{% if request.endpoint == 'index' %}active{% endif %}"><a href="{{ url_for('index') }}">Top 50 Books</a></li>
-                <li class="{% if request.endpoint == 'recommend_ui' %}active{% endif %}"><a href="{{ url_for('recommend_ui') }}">Recommend Books</a></li>
+                <li><a href="{{ url_for('index') }}">Top 50 Books</a></li>
+                <li class="active"><a href="{{ url_for('recommend_ui') }}">Recommend Books</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                {% if current_user.is_authenticated %}
-                    <li class="{% if request.endpoint == 'profile' %}active{% endif %}"><a href="{{ url_for('profile') }}">Profile</a></li>
-                    <li><a href="{{ url_for('logout') }}" class="btn btn-danger navbar-btn" style="margin-left: 10px;">Logout</a></li>
-                {% else %}
-                    <li><a href="{{ url_for('login') }}">Login</a></li>
-                {% endif %}
+                <li><a href="{{ url_for('view_cart') }}">Cart ({% if cart_count %}{{ cart_count }}{% else %}0{% endif %})</a></li>
+                <li><a href="{{ url_for('profile') }}">Profile</a></li>
+                <li><a href="{{ url_for('logout') }}" class="btn btn-danger navbar-btn" style="margin-left: 10px;">Logout</a></li>
             </ul>
         </div>
     </nav>
     <div class="container">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
 
         <div class="row" style="margin-bottom: 30px;">
             <div class="col-md-12">
@@ -98,11 +68,17 @@
                             <a href="{{ item[3] }}" target="_blank" class="btn btn-warning btn-sm mt-2">
                                 Buy Now (Amazon)
                             </a>
-
                             <a href="{{ item[4] }}" target="_blank" class="btn btn-success btn-sm mt-2">
                                 Find Free Ebook
                             </a>
-                            </div>
+
+                            <form method="POST" action="{{ url_for('add_to_cart', isbn=item[5]) }}">
+                                <button type="submit" class="btn btn-primary btn-sm mt-2" style="width: 100%;">
+                                    Add to Cart
+                                </button>
+                            </form>
+
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
